--- a/index.html
+++ b/index.html
@@ -14,72 +14,82 @@
 
 <body>
 
-    <!-- ============================
-            SECTION 1 — HERO BANNER
-        ============================ -->
-        
+ <!-- ============================
+      SECTION 1 — HERO OFFER
+=============================== -->
+
 <section class="offer-section">
-            <!-- COUNTDOWN BOX -->
-<div class="footer-countdown-box">
 
-    <h3 class="countdown-title">ƯU ĐÃI KẾT THÚC SAU</h3>
-
-    <div class="countdown-timer">
-        <div class="time-box">
-            <span id="cd-days">00</span>
-            <label>NGÀY</label>
-        </div>
-
-        <div class="time-box">
-            <span id="cd-hours">00</span>
-            <label>GIỜ</label>
-        </div>
-
-        <div class="time-box">
-            <span id="cd-mins">00</span>
-            <label>PHÚT</label>
-        </div>
-
-        <div class="time-box">
-            <span id="cd-secs">00</span>
-            <label>GIÂY</label>
-        </div>
-    </div>
-
-</div>
     <div class="offer-overlay"></div>
 
+    <div class="offer-wrapper">
 
-    <div class="offer-content">
+        <!-- =======================
+              CỘT TRÁI — COUNTDOWN
+        ======================== -->
+        <div class="offer-left">
 
-        <h2 class="offer-title">TẶNG VOUCHER TRỊ GIÁ</h2>
-        <div class="offer-highlight">1.000.000 ĐỒNG</div>
+            <div class="footer-countdown-box">
+                <h3 class="countdown-title">ƯU ĐÃI KẾT THÚC SAU</h3>
 
-        <div class="offer-sub">CÁC KHÓA LUYỆN THI:</div>
+                <div class="countdown-timer">
+                    <div class="time-box">
+                        <span id="cd-days">00</span>
+                        <label>NGÀY</label>
+                    </div>
 
-        <div class="offer-option">
-            <img src="Picture/icon tick-02.png">
-            ANH VĂN CHUYÊN SÂU
+                    <div class="time-box">
+                        <span id="cd-hours">00</span>
+                        <label>GIỜ</label>
+                    </div>
+
+                    <div class="time-box">
+                        <span id="cd-mins">00</span>
+                        <label>PHÚT</label>
+                    </div>
+
+                    <div class="time-box">
+                        <span id="cd-secs">00</span>
+                        <label>GIÂY</label>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
-        <div class="offer-option">
-            <img src="Picture/icon tick-02.png">
-            ANH VĂN GIAO TIẾP
+        <!-- =======================
+              CỘT PHẢI — NỘI DUNG OFFER
+        ======================== -->
+        <div class="offer-right">
+
+            <h2 class="offer-title">TẶNG VOUCHER TRỊ GIÁ</h2>
+            <div class="offer-highlight">1.000.000 ĐỒNG</div>
+
+            <div class="offer-sub">CÁC KHÓA LUYỆN THI:</div>
+
+            <div class="offer-option">
+                <img src="Picture/icon tick-02.png">
+                ANH VĂN CHUYÊN SÂU
+            </div>
+
+            <div class="offer-option">
+                <img src="Picture/icon tick-02.png">
+                ANH VĂN GIAO TIẾP
+            </div>
+
+            <p class="offer-note">
+                Dành cho học viên đăng ký trước ngày 6/12 – chỉ có 20 suất.  
+                Tham gia ngay để có thêm nhiều ưu đãi!
+            </p>
+
+            <a href="https://forms.gle/fK6hSE4PdCKRYNCm6" class="offer-btn">ĐĂNG KÍ NGAY!</a>
+
         </div>
 
-        <p class="offer-note">
-            Dành cho học viên đăng ký trước ngày 6/12 – chỉ có 20 suất.  
-            Tham gia ngay để có thêm nhiều ưu đãi!
-        </p>
+    </div> <!-- END WRAPPER -->
 
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeXtoY_WXydkuc8GnCV4qoV-V312LyI0ADyLDA3E7XZ7enS0w/viewform" class="offer-btn">ĐĂNG KÍ NGAY!</a>
-    </div>
-
-
-
-
-    
 </section>
+
 
 
     <!-- END HERO SECTION -->
